<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="testBaseURL">http://60.205.190.45:8080/education/</string>
    <string name="realPhoneURL">http://192.168.1.105:5555/myserver/</string>
    <!--<string name="testBaseURL">http://10.0.2.2:8080/myserver/</string>-->
    <string name="testBaseURL2">http://192.168.0.107:8080/myserver/</string>

    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="login_defualt">请输入用户名</string>
    <string name="login_defualt2">请输入密码</string>
    <string name="reset">重置</string>
    <string name="title_activity_linkman">LinkmanActivity</string>
    <string name="title_activity_message">MessageActivity</string>
</resources>
