<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_defualt"
                android:inputType="textPersonName"
                android:textColorHint="@color/gray" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_defualt2"
                android:inputType="textPassword"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textColor="@color/White"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textColor="@color/White"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="bottom">-->

        <!--<Button-->
        <!--android:id="@+id/buttonSignIn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="58dp"-->
        <!--android:layout_marginRight="58dp"-->
        <!--android:background="@color/white"-->
        <!--android:text="@string/register" />-->
        <!--</LinearLayout>-->
    </LinearLayout>

</LinearLayout>
